--- a/segundo/Dockerfile
+++ b/segundo/Dockerfile
@@ -12,14 +12,14 @@ RUN   yum install -y --nodocs --disableplugin=subscription-manager httpd && \
 
 # Allows child images to inject their own content into DocumentRoot
 ONBUILD COPY src/ ${DOCROOT}/
-
-EXPOSE 80
+RUN sed -i "s/Listen 80/Listen 8080/g" /etc/httpd/conf/httpd.conf
+EXPOSE 8080
 
 # This stuff is needed to ensure a clean start
 RUN rm -rf /run/httpd && mkdir /run/httpd
 
 # Run as the root user
-USER root
+USER 1001
 
 # Launch httpd
 CMD /usr/sbin/httpd -DFOREGROUND
