ajuste permision log httpd

--- a/segundo/Dockerfile
+++ b/segundo/Dockerfile
@@ -14,6 +14,7 @@ RUN   yum install -y --nodocs --disableplugin=subscription-manager httpd && \
 ONBUILD COPY src/ ${DOCROOT}/
 RUN sed -i "s/Listen 80/Listen 8080/g" /etc/httpd/conf/httpd.conf
 EXPOSE 8080
+RUN chgrp -R 0 /var/log/httpd /var/run/httpd && chmod -R g=u /var/log/httpd /var/run/httpd
 
 # This stuff is needed to ensure a clean start
 RUN rm -rf /run/httpd && mkdir /run/httpd
