--- a/segundo/Dockerfile
+++ b/segundo/Dockerfile
@@ -2,31 +2,21 @@ FROM registry.access.redhat.com/ubi8/ubi:8.0
 
 MAINTAINER Red Hat Training <training@redhat.com>
 
-# DocumentRoot for Apache
-ENV DOCROOT=/var/www/html 
-LABEL io.openshift.expose-services="8080:http"
+LABEL Component="httpd" 
 
 LABEL io.k8s.description="A basic Apache HTTP Server child image, uses ONBUILD" \
       io.k8s.display-name="Apache HTTP Server" \
       io.openshift.expose-services="8080:http" \
       io.openshift.tags="apache, httpd"
 
-RUN   yum install -y --nodocs --disableplugin=subscription-manager httpd && \
-      yum clean all --disableplugin=subscription-manager -y && \
-      echo "Hello from the httpd-parent container!" > ${DOCROOT}/index.html
+RUN yum -y update && yum -y install httpd && yum clean all
 
-# Allows child images to inject their own content into DocumentRoot
-ONBUILD COPY src/ ${DOCROOT}/
-RUN sed -i "s/#ServerName www.example.com:80/ServerName 0.0.0.0:8080/g" /etc/httpd/conf/httpd.conf
-RUN sed -i "s/Listen 80/Listen 8080/g" /etc/httpd/conf/httpd.conf
-EXPOSE 8080
-RUN chgrp -R 0 /var/log/httpd /var/run/httpd && chmod -R g=u /var/log/httpd /var/run/httpd
+RUN mkdir -p /var/www/html
 
-# This stuff is needed to ensure a clean start
-RUN rm -rf /run/httpd && mkdir /run/httpd
+RUN echo "Hello" >> /var/www/html/index.html
 
-# Run as the root user
-USER 1001
+ADD scripts /scripts
+RUN chmod 755 /scripts/*
 
-# Launch httpd
-CMD /usr/sbin/httpd -DFOREGROUND
+EXPOSE 80
+CMD ["/bin/bash", "/scripts/run-apache.sh" ]
