--- a/segundo/Dockerfile
+++ b/segundo/Dockerfile
@@ -15,7 +15,14 @@ RUN mkdir -p /var/www/html
 
 RUN echo "Hello" > /var/www/html/index.html
 
-EXPOSE 80
+EXPOSE 8080
+
+RUN sed -i "s/Listen 80/Listen 8080/g" /etc/httpd/conf/httpd.conf 
+RUN sed -i "s/#ServerName www.example.com:80/ServerName 0.0.0.0:8080/g" /etc/httpd/conf/httpd.conf
+
+RUN chgrp -R 0 /var/log/httpd /var/run/httpd && chmod -R g=u /var/log/httpd /var/run/httpd
+
+USER 1001
 
 RUN rm -rf /run/httpd && mkdir /run/httpd
 
